log/build_2022-03-17_10-49-00/rc_data_emulator/stdout_stderr.log
running egg_info
writing ../../build/rc_data_emulator/rc_data_emulator.egg-info/PKG-INFO
writing dependency_links to ../../build/rc_data_emulator/rc_data_emulator.egg-info/dependency_links.txt
writing entry points to ../../build/rc_data_emulator/rc_data_emulator.egg-info/entry_points.txt
writing requirements to ../../build/rc_data_emulator/rc_data_emulator.egg-info/requires.txt
writing top-level names to ../../build/rc_data_emulator/rc_data_emulator.egg-info/top_level.txt
reading manifest file '../../build/rc_data_emulator/rc_data_emulator.egg-info/SOURCES.txt'
writing manifest file '../../build/rc_data_emulator/rc_data_emulator.egg-info/SOURCES.txt'
running build
running build_py
copying rc_data_emulator/rc_emu_module.py -> /home/nayab/dev_ws/build/rc_data_emulator/build/lib/rc_data_emulator
copying rc_data_emulator/rc_data_emu.py -> /home/nayab/dev_ws/build/rc_data_emulator/build/lib/rc_data_emulator
running install
running install_lib
copying /home/nayab/dev_ws/build/rc_data_emulator/build/lib/rc_data_emulator/rc_emu_module.py -> /home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator
copying /home/nayab/dev_ws/build/rc_data_emulator/build/lib/rc_data_emulator/rc_data_emu.py -> /home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator
byte-compiling /home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_emu_module.py to rc_emu_module.cpython-38.pyc
byte-compiling /home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_data_emu.py to rc_data_emu.cpython-38.pyc
running install_data
  File "/home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_data_emu.py", line 42
    if !(autonomousCommand==0):
       ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/rc_data_emulator/rc_data_emulator.egg-info to /home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator-0.0.0-py3.8.egg-info
running install_scripts
Installing rc_emu script to /home/nayab/dev_ws/install/rc_data_emulator/lib/rc_data_emulator
writing list of installed files to '/home/nayab/dev_ws/build/rc_data_emulator/install.log'
